go-api/go-api-node-selector.yaml
apiVersion: v1
kind: Pod
metadata:
  name: go-api
spec:
  nodeSelector:
    gpu: "true"
  containers:
    - name: go-api
      image: gadhittana01/goapi:latest
      ports:
        - containerPort: 3000
