go-api/go-api-with-label.yaml
apiVersion: v1
kind: Pod
metadata:
  name: go-api
  labels:
    app: go-api
    version: 1.0.0
    env: prod
spec:
  containers:
    - name: go-api
      image: gadhittana01/goapi:latest
      ports:
        - containerPort: 3000
