go-api/go-api.yaml
apiVersion: v1
kind: Pod
metadata:
  name: go-api
spec:
  containers:
    - name: go-api
      image: gadhittana01/goapi:latest
      ports:
        - containerPort: 3000
