go-api/service-go-api-loadbalancer.yaml

apiVersion: v1
kind: Service
metadata:
  name: go-api-service
spec:
  type: LoadBalancer
  selector:
    name: go-api
  ports:
    - port: 3000
      targetPort: 3000
