go-api/service-go-api-nodeport.yaml

apiVersion: v1
kind: Service
metadata:
  name: go-api-service
spec:
  type: NodePort
  selector:
    name: go-api
  ports:
    - port: 3000
      targetPort: 3000
      nodePort: 30001
