go-api/service-go-api.yaml

apiVersion: v1
kind: Service
metadata:
  name: go-api-service
spec:
  selector:
    name: go-api
  ports:
    - port:       
      targetPort: 3000

---

apiVersion: v1
kind: Pod
metadata:
  name: curl
  labels:
    name: curl
spec:
  containers:
    - name: curl
      image: khannedy/nginx-curl
